unpackaged/main/default/objects/pro_Error_Log__c/pro_Error_Log__c.object-meta.xml
<CustomObject>
    <description>JP 15/03/2023 V1 - Created by Prodigy</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>