unpackaged/main/default/objects/pro_Error_Log__c/fields/pro_Related_Records__c.field-meta.xml
<CustomField>
    <fullName>pro_Related_Records__c</fullName>
    <description>JP 15/03/2023 V1 - Created by Prodigy</description>
    <label>Related Records</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>