unpackaged/main/default/objects/pro_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>pro_Error_Message__c</columns>
    <columns>pro_Error_Trace__c</columns>
    <columns>pro_Related_Records__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>